this should be good

--- a/cft/a-hw2-1323-roles-and-policies.yml
+++ b/cft/a-hw2-1323-roles-and-policies.yml
@@ -47,6 +47,8 @@ Resources:
                   - "lambda:RemovePermission"
                   - "lambda:UpdateFunctionCode"
                   - "lambda:UpdateFunctionConfiguration"
+                  - "lambda:PublishVersion"
+                  - "lambda:EnableReplication"
                 Resource:
                   #- !Sub "arn:aws:lambda:::function*"
                   - !Sub "arn:aws:lambda:*:${AWS::AccountId}:function:*"
