--- a/appspec.yml
+++ b/appspec.yml
@@ -1,12 +1,12 @@
 version: 0.0
 resources:
   - HW2LambdaFunction3:
-    Type: AWS::Lambda::Function
-    Properties:
-      Name: "hw2_lambda3"
-      Alias: "hw2_lambda3_alias"
-      CurrentVersion: "1"
-      TargetVersion: "2"
+    type: AWS::Lambda::Function
+    properties:
+      name: "hw2_lambda3"
+      alias: "hw2_lambda3_alias"
+      currentversion: "1"
+      targetversion: "2"
 hooks:
   - BeforeAllowTraffic: "hw2_validate_before_lambda"
   - AfterAllowTraffic: "hw2_validate_after_lambda"
