--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,8 @@
 version: 0.2
+
+env:
+    variables:
+
 phases:
     install:
         runtime-versions:
@@ -12,21 +16,15 @@ phases:
     build:
         commands:
             - echo Build started on `date`
-            - zip -r hw2_1323_lambdas.zip .
             - zip -r -j hw2_1323_lambda1.zip src/hw2_lambda1.py src/util.py src/s3.py
             - zip -r -j hw2_1323_lambda2.zip src/hw2_lambda2.py
-            - zip -r -j hw2_1323_lambda3.zip src/hw2_lambda3.py
     post_build:
         commands:
             - echo Build completed on `date`
             - echo "Updating lambda function code."
             - aws lambda update-function-code --function-name "hw2_lambda1" --zip-file fileb://./hw2_1323_lambda1.zip
             - aws lambda update-function-code --function-name "hw2_lambda2" --zip-file fileb://./hw2_1323_lambda2.zip
-            - aws lambda update-function-code --function-name "hw2_lambda3" --zip-file fileb://./hw2_1323_lambda3.zip
-            #- aws lambda publish-version --function-name "hw2_lambda3"
+
 artifacts:
     name: hw2_1323_lambda_build
-    files:
-        - 'hw2_1323_lambdas.zip'
-        - './appspec.yml'
     discard-paths: yes
