--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,15 +16,11 @@ phases:
     build:
         commands:
             - echo Build started on `date`
-            - zip -r -j hw2_1323_lambda1.zip src/hw2_lambda1.py src/util.py src/s3.py
-            - zip -r -j hw2_1323_lambda2.zip src/hw2_lambda2.py
+            - zip -r -j index_photos_function.zip src/index_photos_function.py
+            - zip -r -j search_photos_function.zip src/search_photos_function.py
     post_build:
         commands:
             - echo Build completed on `date`
             - echo "Updating lambda function code."
-            - aws lambda update-function-code --function-name "hw2_lambda1" --zip-file fileb://./hw2_1323_lambda1.zip
-            - aws lambda update-function-code --function-name "hw2_lambda2" --zip-file fileb://./hw2_1323_lambda2.zip
-
-artifacts:
-    name: hw2_1323_lambda_build
-    discard-paths: yes
+            - aws lambda update-function-code --function-name "hw2-index-photos-function" --zip-file fileb://./index_photos_function.zip
+            - aws lambda update-function-code --function-name "hw2-search-photos-function" --zip-file fileb://./search_photos_function.zip
