aligning with hw3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,10 @@
 version: 0.2
-
-env:
-    variables:
-
 phases:
     install:
         runtime-versions:
             python: 3.8
         commands:
-            - echo "Capturing the AWS CLI and Python versions used in this build."
+            - echo "Capturing the AWS CLI and Python versions used in the build."
             - aws --version
             - python --version
     pre_build:
