--- a/cft/hw2_pipeline.yml
+++ b/cft/hw2_pipeline.yml
@@ -2,35 +2,24 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: 'Creates Homework #2 Code Pipeline'
 Resources:
 
-
   HW2RepoBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Delete
     Properties:
       BucketName: 'hw2-1323-repo'
-      Tags:
-        - Key: project
-          Value: hw2
-        - Key: account
-          Value: 1323
 
   # SOURCE: https://gist.github.com/andreidiaconu90/178a74c4bba55406bd6f60106a8ad0d3
 
   HW2CodePipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
-      Name: 'hw2-1323-codedeploy'
+      Name: 'hw2-codedeploy'
       ArtifactStore:
         - Type: S3
         - Location: !Ref: HW2RepoBucket
       RoleArn: !GetAtt
         - HW2CodePipelineServiceRole
         - Arn
-      Tags:
-        - Key: project
-          Value: hw2
-        - Key: account
-          Value: 1323
       #RestartExecutionOnUpdate: true
       Stages:
         - Name: Source # this is the name that will show up in the AWS console, so consider this the user-friendly name
@@ -86,7 +75,7 @@ Resources:
   HW2CodeBuildDeploy2Stage:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: 'hw2-1323-code-build-deploy2stage'
+      Name: 'hw2-code-build-deploy2stage'
       ServiceRole: !GetAtt
         - HW2CodePipelineServiceRole
         - Arn
@@ -104,11 +93,10 @@ Resources:
         BuildSpec: 'buildspec.yml'
       TimeoutInMinutes: 10
 
-
   HW2CodeBuildDeploy2Prod:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: 'hw2-1323-code-build-deploy2prod'
+      Name: 'hw2-code-build-deploy2prod'
       ServiceRole: !GetAtt
         - MyCodePipelineServiceRole
         - Arn
@@ -126,11 +114,10 @@ Resources:
         BuildSpec: 'buildspec.yml'
       TimeoutInMinutes: 10
 
-
   HW2CodePipelineServiceRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: hw2-1323-code-pipeline-service-role
+      RoleName: hw2-code-pipeline-service-role
       Description: Allows CodePipeline to do it's thing.
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -143,7 +130,7 @@ Resources:
             Action: "sts:AssumeRole"
       Path: /
       Policies:
-        - PolicyName: hw2-1323-code-pipeline-policy
+        - PolicyName: hw2-code-pipeline-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -160,8 +147,8 @@ Resources:
                   - "codebuild:BatchGetBuilds"
                   - "codebuild:StartBuild"
                 Resource:
-                  - !Sub "arn:aws:codebuild:*:${AWS::AccountId}:project/hw2-1323-code-build-deploy2stage" #CodeBuild project we've created earlier
-                  - !Sub "arn:aws:codebuild:*:${AWS::AccountId}:project/hw2-1323-code-build-deploy2prod" #CodeBuild project we've created earlier
+                  - !Sub "arn:aws:codebuild:*:${AWS::AccountId}:project/hw2-code-build-deploy2stage" #CodeBuild project we've created earlier
+                  - !Sub "arn:aws:codebuild:*:${AWS::AccountId}:project/hw2-code-build-deploy2prod" #CodeBuild project we've created earlier
               - Effect: Allow
                 Action:
                   - "iam:GetRole"
@@ -188,7 +175,6 @@ Resources:
                   - "logs:FilterLogEvents"
                 Resource:
                   - !Sub "arn:aws:logs:*:${AWS::AccountId}:log-group::log-stream*"
-
 
 Outputs:
   HW2RepoBucketARN:
