--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
             - zip -r -j index_photos_function.zip src/index_photos_function.py
             - zip -r -j search_photos_function.zip src/search_photos_function.py
             - echo Building hw2 javascript SDK started on `date`
-            - aws apigateway get-sdk --rest-api-id d8n5fb21w7 --stage-name v1 --sdk-type javascript ./hw2-api-js-sdk.zip
+            - aws apigateway get-sdk --rest-api-id d8n5fb21w7 --stage-name v1 --sdk-type javascript ./hw2-js-sdk.zip
     post_build:
         commands:
             - echo Build completed on `date`
