working on pipeline error

--- a/cft/hw2_pipeline_stack.yml
+++ b/cft/hw2_pipeline_stack.yml
@@ -139,8 +139,7 @@ Resources:
                   - 'apigateway:PUT'
                 Resource:
                   - !Sub 'arn:aws:apigateway:*::/restapis/*'
-                  - !Sub 'arn:aws:apigateway:*::/restapis/??????????'
-                  #- !Sub 'arn:aws:apigateway:*::/restapis/d8n5fb21w7/stages/v1*'
+                  #- !Sub 'arn:aws:apigateway:*::/restapis/??????????'
               - Effect: Allow
                 Action:
                   - 'logs:CreateLogGroup'
