--- a/cft/hw2_pipeline_stack.yml
+++ b/cft/hw2_pipeline_stack.yml
@@ -138,8 +138,9 @@ Resources:
                   - 'apigateway:GET'
                   - 'apigateway:PUT'
                 Resource:
+                  - !Sub 'arn:aws:apigateway:*::/restapis*'
                   - !Sub 'arn:aws:apigateway:*::/restapis/*'
-                  #- !Sub 'arn:aws:apigateway:*::/restapis/??????????'
+                  - !Sub 'arn:aws:apigateway:*::/restapis/??????????'
               - Effect: Allow
                 Action:
                   - 'logs:CreateLogGroup'
