--- a/buildspecs/js_sdk_buildspec.yml
+++ b/buildspecs/js_sdk_buildspec.yml
@@ -6,13 +6,12 @@ phases:
             - aws --version
     pre_build:
         commands:
+            - echo "Fetching the API ID from api gateway to use in build phase"
             - api_id=$(aws apigateway get-rest-apis --query 'items[?name==`hw2-api-gateway`].[id]' --output text)
             - echo $api_id
     build:
         commands:
             - echo Generating hw2 javascript sdk - started on `date`
-            #- api_id=$(aws apigateway get-rest-apis --query 'items[?name==`hw2-api-gateway`].[id]' --output text)
-            #- echo $api_id
             - aws apigateway get-sdk --rest-api-id $api_id --stage-name v1 --sdk-type javascript hw2-js-sdk.zip
     post_build:
         commands:
